--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,10 @@
     "angular-sanitize": ">=1.2.*",
     "angular-route": ">=1.2.*",
     "font-awesome": ">=4.1.0",
-    "lodash": "~2.4.1"
+    "lodash": "~2.4.1",
+    "animate.css": "~3.2.0",
+    "angular-animate": "~1.2.25",
+    "bootstrap-ui": "~0.11.0"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
