--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,8 @@
     "lodash": "~2.4.1",
     "animate.css": "~3.2.0",
     "angular-animate": "~1.2.25",
-    "bootstrap-ui": "~0.11.0"
+    "bootstrap-ui": "~0.11.1",
+    "angular-bootstrap": "~0.11.1"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
