--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,8 @@
     "animate.css": "~3.2.0",
     "angular-animate": "~1.2.25",
     "bootstrap-ui": "~0.11.1",
-    "angular-bootstrap": "~0.11.1"
+    "angular-bootstrap": "~0.11.1",
+    "angular-timer": "~1.1.7"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
