--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,8 @@
     "angular-animate": "~1.2.25",
     "bootstrap-ui": "~0.11.1",
     "angular-bootstrap": "~0.11.1",
-    "angular-timer": "~1.1.7"
+    "angular-timer": "~1.1.7",
+    "ng-file-upload": "~1.6.12"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
