--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,8 @@
     "bootstrap-ui": "~0.11.1",
     "angular-bootstrap": "~0.11.1",
     "angular-timer": "~1.1.7",
-    "ng-file-upload": "~1.6.12"
+    "ng-file-upload": "~1.6.12",
+    "angular-social": "~0.1.1"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
